crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_prop_chain.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0.address.city AS city]
  Source (AS $0)
