crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_match_with_match_return.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n, $2 AS m]
  Expand ($0)-[:KNOWS(->) $1]->( AS $2)
    With [$0 AS n]
      Source (:Person AS $0)
