crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_match_with_where_return.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  With [$0 AS n] WHERE ($0.active = true)
    Source (:Person AS $0)
