crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_merge_node_on_create_match.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
WriteOps:
  MergeNode (:Person AS $0) props={email: $email}
    ON CREATE:
      SetProperty $0.created = true
    ON MATCH:
      SetProperty $0.updated = true
