crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_node_multi_label.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Source (:Person:Employee AS $0)
